static/css/main.css
/* ... */
/*######################### The items / listings / products - CSS #########################################################*/
.item_img {
    width: auto;
    height: 13em;
    max-width: 12em;
    object-fit: contain;
    border-bottom: 2px rgb(0, 0, 0) solid;
    border-radius: 5px;

    /* border: 2px rgb(224, 4, 4) solid;   */

}

/* ----------Content holder conatainer, all items----------- */
.content_container_holder {
    /* position: relative; */

    width: 100%;
    height: 100%;
    box-sizing: border-box;
    top: 50px;
    left: 50%;
    bottom: 50px;
    padding: 2px;
    /* transform: translate(-50%); */
    width: 100%;
    color: rgb(255, 194, 80);
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
    overflow: auto;
    overflow-x: hidden;
    background: linear-gradient(to bottom, rgb(34, 38, 54) 20%, #362b31 100%);
    box-shadow: 0 0 2pt 2pt rgb(33, 33, 36);
    border: solid 2px rgb(17, 17, 22);
    border-radius: 6px;
    --scrollbarBG: rgb(70, 103, 109);
    --thumbBG: rgba(81, 74, 85, 0.78);
    /* overflow: hidden; */
    /* background-color: blue; */
    overflow: hidden;
    display: flex;
    flex-flow: column;
}


.content-container-holder-topbar {
    text-align: center;
    border-bottom: 2px solid rgb(79, 81, 102);

}

.content-container-holder-topbar div {
    margin-bottom: 10px;
    /* overflow-y: auto; */
}

.content-container-holder-topbar input {
    width: 38vw;
    min-width: 50px;
    max-width: 300px;
    margin-right: 3px;
}





.item-title {
    margin: 0 auto 5px auto;
    padding-bottom: 3px;
    /* text-decoration-line: underline; */
    font-size: 1.2em;
    /* border-bottom: 2px solid rgb(79, 81, 102); */
    color: #00ff4c;
}

.item-title-img {
    height: 20px;
    margin-right: 5px;
}





#app {
    text-align: center;
    width: 100%;
    height: 100%;
    overflow: auto;
    padding-top: 8px;
}




/* --------Content - Item---IMG--TXT---SHARE--BUTTONS-----------*/
.content_container_item {
    background-color: rgb(34, 36, 43);
    min-width: 150px;
    min-height: 200px;
    width: fit-content;
    height: fit-content;
    /* box-shadow: 0 0 10pt 3pt rgb(0, 0, 0); */
    /* filter: drop-shadow(0 0.2rem 0.25rem rgb(14, 207, 255)); */
    box-shadow: 0 0 5pt 2pt rgba(33, 182, 216, 0.39);
    border-radius: 5px;
    border: solid 2px rgb(17, 17, 22);
    transition: transform 0.5s ease;


    margin: 2px;
    padding: 1px;
    font-family: Arial, Helvetica, sans-serif;
    color: lime;
    text-decoration: none;
    font-weight: bold;

    display: inline-block;
    text-align: center;
    vertical-align: top;
    position: relative;

}

.content_container_item:hover {
    box-shadow: 0 0 5pt 2pt rgba(33, 182, 216, 0.39);
    border: solid 2px rgb(255, 119, 65);
    border-radius: 5px;
    color: rgb(255, 155, 115);
    filter: saturate(2) drop-shadow(0 0.2rem 0.25rem rgb(255, 123, 46));
    text-decoration: underline;
}

/* The text under the image, to be only as long as the image width */
.content_container_item p {
    width: 0;
    min-width: 100%;
    margin: 0;
    text-shadow: 2px 1px black;
    filter: drop-shadow(1px 1px 3px black);
}

/* Modal share buttons ------------------------------------------------*/



/* The share buttons on every item at the bottom -----------------------------------------*/
.item_share_button {
    /* background-color: red; */
    width: 35px;
    height: 35px;
    border-radius: 5px;
    display: inline-block;
    /* float: right;
    margin-right: 8px; */
    /* margin-right: 7px; */
    background-size: cover;
    filter: drop-shadow(2px 4px 1px rgb(0, 0, 0));
}

.item_share_button:hover {
    filter: drop-shadow(0 0.2rem 0.25rem rgb(255, 165, 46));
}

.item_share_button:active {
    filter: drop-shadow(0 0.2rem 0.25rem rgb(79, 220, 255));
}

/* Share buttons holder  */
.item_buttons_wrapper {
    /* vertical-align: top; */
    /* margin-top: 0; */
    position: absolute;
    top: 11rem;
    left: 0;
    height: fit-content;
    width: 0;
    min-width: 100%;
    margin: 0;
    /* background-color: aqua; */
    /* box-sizing: border-box; */
    display: inline-block;
    /* white-space: nowrap; */
}


.price {
    position: absolute;
    top: 5px;
    left: 10px;
    text-shadow: black 1px -3px 2px;
    filter: drop-shadow(-1px 2px 1px #000000);
    color: #00ff95;
}

.price:hover {
    color: #00b7ff;
}



/* --------The items modal-----------------*/
#modalWindow {
    display: none;
    background-color: rgba(14, 22, 31, 0.8);
    position: absolute;
    z-index: 100;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

}


.modalContentContainer {
    display: flex;
    position: relative;
    border-radius: 10px;
    border: 2px solid rgb(83, 82, 99);
    background-color: rgb(44, 48, 49);
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    /* max-height: 90vh;
     max-width: 90vw;
     min-height:auto;
     min-width: 50vh;
     height: auto;
     width: 120vh; */
    width: 80%;
    height: auto;
    max-height: 80%;
    padding: 10px;
    color: rgb(252, 202, 65);
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
    overflow: auto;
}








/* // Line ---------------------------------------------------------------------- */

hr {
    width: 95%;
    border: 1px solid rgb(116, 113, 113);
    border-radius: 2px;
    padding: 0;
    margin: 0 auto 0 auto;
}



h3 {
    word-break: keep-all;
    text-align: center;
    padding: 0;
    margin: 2px 0px 8px 0px;
}

/* Modal Images and item details ------------------------------------------------ */
.modalItemContainer {
    display: inline-flex;
    width: 100%;
    max-height: 100%;
}


.modalItemContainer div {
    background-color: rgb(67, 67, 75);
    display: flex;
    flex-direction: column;

}
/* ... */

